--- a/src/app/views/card/card.component.html
+++ b/src/app/views/card/card.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="row px-4">
             <div class="col">
-                <h5 class="card-title">{{ product?.title }}</h5>
+                <h6 class="card-title">{{ product!.title | truncate: 60 }}</h6>
             </div>
         </div>
         <div class="row px-4">
