--- a/src/app/views/contact/contact.component.css
+++ b/src/app/views/contact/contact.component.css
@@ -1,3 +1,50 @@
-.container {
-    padding-bottom: 650px;
+
+section{
+    height: 90vh;
+}
+
+.container{
+    border: 2px solid rgb(55, 47, 45);
+}
+
+h1{
+    margin-top: 2rem;
+}
+
+p{
+    font-size: 1rem;
+}
+
+label{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+span{
+    font-size: 1rem;
+}
+
+.form-control{
+    border-radius: 0;
+}
+
+.form-control.is-invalid:focus{
+    box-shadow: none;
+    border: 2px solid rgb(55, 47, 45);
+}
+
+.form-control:focus{
+    box-shadow: none;
+    border: 2px solid rgb(55, 47, 45);
+}
+
+.btn-personalized{
+    outline: 2px solid rgb(55, 47, 45);
+    border-radius: 0;
+    width: 100%;
+}
+
+.btn-personalized:hover{
+    background-color:rgb(55, 47, 45);
+    color: white;
 }
