--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,7 +5,7 @@
                 <div class="col-md text-center text-light">
                     <h1>Welcome to our market web</h1>
                     <h2>We sell the best products</h2>
-                    <button class="mt-2 btn btn btn-outline-light">Go to Store</button>
+                    <button class="mt-2 btn btn btn-outline-light" (click)="goToStore()">Go to Store</button>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
             </div> 
             <div class="row">
                 @for (product of productsByCategory[category]; track $index) {
-                    <div class="col d-flex justify-content-center text-center">
+                    <div class="col-xl col-lg-6 col-sm-12">
                         <app-card [product]=product></app-card>
                     </div>
                 }
