--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -2,20 +2,11 @@
     <div class="products-banner d-flex justify-content-center align-items-center">
         <h1 class="title">This are our products</h1>
     </div>
-    <div class="row p-4">
-        <!-- Side navigation -->
-        <div class="col-3">
-          <ul class="list-group">
-            <h3>All Categories</h3>
-            @for (category of categoryList; track $index) {
-                <li class="list-group-item category-link" (click)="selectCategory(category)">
-                    {{ category | titlecase }}
-                </li>
-            }
-          </ul>
+    <div class="row px-4 align-items-center">
+        <div class="col-2">
+            <h3 class="">Categories</h3>
         </div>
-         <!-- Products Section -->
-        <div class="col-9">
+        <div class="col">
             <div class="row p-4">
                 <div class="col"></div>
                 <div class="col d-flex justify-content-end align-items-center">
@@ -29,9 +20,24 @@
                     </select>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row px-4">
+        <!-- Side navigation -->
+        <div class="col-2">
+          <ul class="">
+            @for (category of categoryList; track $index) {
+                <li class="category-link" [class.active]="activeCategory === category" (click)="selectCategory(category)">
+                    {{ category | titlecase }}
+                </li>
+            }
+          </ul>
+        </div>
+         <!-- Products Section -->
+        <div class="col">
             <div class="row">
             @for (product of productsByCategoryList; track $index) {
-                <div class="col-4">
+                <div class="col-md-4 col-sm-6">
                    <app-card [product]=product></app-card>
                 </div>
             }
