--- a/src/app/views/card/card.component.html
+++ b/src/app/views/card/card.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row pb-4">
             <div class="col d-flex justify-content-center">
-                <button (click)="navigate(product?.id)" class="btn btn-dark" style="width: 80%;">See More</button>
+                <button (click)="navigate(product?._id)" class="btn btn-dark" style="width: 80%;">See More</button>
             </div>
         </div>
     </div>
