--- a/src/app/views/card/card.component.html
+++ b/src/app/views/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="col d-flex justify-content-center text-center">
     <div class="card d-flex justify-content-between">
-        <div class="row m-2">
+        <div class="row mt-4">
             <div class="col d-flex card-top align-items-center"><img src="{{ product?.image }}" class="card-img-top cardImage" alt="{{ product?.title }}" ></div>
         </div>
         <div class="row px-4">
