--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,3 +17,43 @@ nav{
 .nav-link{
     font-size: 1rem;
 }
+
+.textoLogo{
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+#cart{
+    height: 3vh;
+}
+
+.cart-wrapper {
+    position: relative;
+    width: 3rem;
+}
+  
+.cart-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: left 0.3s ease;
+}
+
+.cart-wrapper:hover .cart-container  {
+    left: 25px;
+}
+
+.cart-wrapper:hover .cart-counter  {
+    left: 25px;
+    opacity: 1;
+}
+
+.cart-counter{
+    color: white;
+    font-size: 1rem;
+    text-align: center;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
