--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,7 +1,12 @@
 <section class="d-flex justify-content-center align-items-center">
+    <div class="overlay">
+
+   
     <div class="container">
-        <h1 class="text-center">Contact Us</h1>
-        <h4 class="text-center">You are always welcomed to contact us!</h4>
+        <div class="cabecera py-2">
+            <h1 class="text-center">Contact Us</h1>
+            <h4 class="text-center">You are always welcomed to contact us!</h4>
+        </div>
         <form [formGroup]="contactForm" class="row g-3 justify-content-center needs-validation" novalidate (submit)="enviar($event)">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
@@ -39,4 +44,5 @@
             </div>
         </form>  
     </div>
+</div>
 </section>
