--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand mx-auto" routerLink="" [ngClass]="{active: menuOption == 'home'}" (click)="onOption('home')">
         <div class="d-flex justify-content-center align-items-center">
           <span class="textoLogo">Example</span>
-          <img id="logo" src="../assets/images/logo.png" alt="logo">
+          <img id="logo" src="assets/images/logo.png" alt="logo">
           <span class="textoLogo">Store</span>
         </div>
       </a>
@@ -29,7 +29,7 @@
               <span class="cart-counter">2</span>
             </div>
             <a class="nav-link cart-container" routerLink="cart" [ngClass]="{active: menuOption == 'cart'}" (click)="onOption('cart')">
-              <img src="../assets/images/cart.png" alt="cart" id="cart">
+              <img src="assets/images/cart.png" alt="cart" id="cart">
             </a>
           </li>
         </ul>
