--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -57,3 +57,41 @@ nav{
     opacity: 0;
     transition: opacity 0.3s ease;
 }
+
+@media (max-width: 991.98px) {
+    
+    .navbar-collapse {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100% !important;
+        background-color: rgba(var(--bs-dark-rgb));
+        z-index: 1050; 
+        overflow-y: auto;
+        transition: transform 0.3s ease;
+    }
+
+    .navbar-collapse:not(.show) {
+        transform: translateX(-100%); 
+    }
+
+    .navbar-collapse.show {
+        transform: translateX(0); 
+    }
+
+    .navbar-nav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+
+    .navbar-nav .nav-item {
+        margin: 1rem 0; 
+    }
+
+    .navbar-toggler , .navbar-brand{
+        z-index: 1051;
+    }
+}
